--- a/css/style.css
+++ b/css/style.css
@@ -760,7 +760,7 @@ footer .copyright {
 .hero .right h1 {
     font-size: 2.5rem;
     font-weight:1600;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     line-height: 1.2;
     margin-bottom: 2rem;
     color: rgb(2, 38, 43);
