--- a/css/style.css
+++ b/css/style.css
@@ -759,7 +759,7 @@ footer .copyright {
 
 .hero .right h1 {
     font-size: 2.5rem;
-    font-weight:1600;
+    font-weight:bolder;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     line-height: 1.2;
     margin-bottom: 2rem;
